# flow-merge

./: .gitignore  README.md  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: promote-channel.yml  release-desktop.yml
docs/: README.md  brand-system.md  component-catalog.md  desktop-release-runbook.md  desktop-updates.md  engineering-tooling.md  feature-map.md  product-positioning.md  runtime-architecture.md  system-design.md
prisma/: schema.prisma
reports/: node-compatibility-report.json  test-and-security-audit-2026-03-30.md
scripts/: build-updater-manifest.ts  check-release-tag-version.ts  e2e-serve.ts  generate_icons.py  release-prepare.ts  release-publish.ts  release-utils.ts  sync-version.ts  tauri-cli.ts  updater-doctor.ts  verify-node-compatibility.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater.dev.pubkey
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  terminal.rs
src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/lib/: ai-node-playbook.ts  ai-workflow-examples.ts  assistant-runner.ts  auth-client.ts  auth.ts  billing-rules.test.ts  billing-rules.ts  code-safety.test.ts  code-safety.ts  data-semantics.ts  deepseek.ts  desktop-updater.ts  flow-types.ts  http-client.ts  license.ts  local-auth.ts  local-terminal.ts  local-workspace.ts  mcp-catalog.ts  mcp.test.ts  mcp.ts  mock-data.ts  node-catalog.ts  node-config.ts  node-docs.ts  node-flow-ux.ts  node-presets.ts  (+22 more)
(+96 files in other folders)
