[package]
name = "flow_merge"
version = "0.2.2"
description = "Desktop shell for Flow Merge"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flow_merge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1.18.1", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
